chore: Integrate openwrite to use modernize java code