@@ -70,8 +70,8 @@ public class BasicAuthenticationController {
 
   private String createAccessToken(String username, String password) {
     final byte[] encodedAuth =
-        Base64.encodeBase64(String.format("%s:%s", username, password).getBytes(UTF_8), false);
-    return String.format("Basic %s", new String(encodedAuth, UTF_8));
+        Base64.encodeBase64("%s:%s".formatted(username, password).getBytes(UTF_8), false);
+    return "Basic %s".formatted(new String(encodedAuth, UTF_8));
   }
 
   private Cookie createCookie(String cookieName, String value, int maxAge) {
