@@ -19,6 +19,6 @@ public class SecretsScanDetails {
   @NonNull String repoName;
 
   public String getFormattedName() {
-    return String.format("%s::%s::%d", repoName, name, id);
+    return "%s::%s::%d".formatted(repoName, name, id);
   }
 }
